--- a/biodata.html
+++ b/biodata.html
@@ -178,15 +178,18 @@
                     <tbody>
                       <tr>
                         <th style="width: 50%;">Permanent Address</th>
-                        <td style="width: 50%;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, modi!</td>
+                        <td style="width: 50%;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, modi!
+                        </td>
                       </tr>
                       <tr>
                         <th style="width: 50%;">Present Address</th>
-                        <td style="width: 50%;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, modi!</td>
+                        <td style="width: 50%;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, modi!
+                        </td>
                       </tr>
                       <tr>
                         <th style="width: 50%;">Where did you grow up?</th>
-                        <td style="width: 50%;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, modi!</td>
+                        <td style="width: 50%;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, modi!
+                        </td>
                       </tr>
                     </tbody>
                   </table>
@@ -333,9 +336,29 @@
               </div>
               <div class="info_item">
                 <h4 class="title">contact Information</h4>
-                <div class="table-responsive">
-                  
-                </div>
+                <!-- <div class="text-center">
+                  <button class="contact_info_btn">Request for Contact Info</button>
+                </div> -->
+                <table class="table table-bordered table-striped mb-0">
+                  <tbody>
+                    <tr>
+                      <th style="width: 50%;">Name</th>
+                      <td style="width: 50%;">Raj</td>
+                    </tr>
+                    <tr>
+                      <th style="width: 50%;">Father's Name</th>
+                      <td style="width: 50%;">Babul Haque</td>
+                    </tr>
+                    <tr>
+                      <th style="width: 50%;">Mother's Name</th>
+                      <td style="width: 50%;">Rahima Akhter</td>
+                    </tr>
+                    <tr>
+                      <th style="width: 50%;">Guardian Phone Number</th>
+                      <td style="width: 50%;">01477878958</td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
