--- a/dashboard.html
+++ b/dashboard.html
@@ -125,6 +125,10 @@
             <div class="profile">
               <div class="image">
                 <img src="assets/img/profile.png" alt="profile" class="img-fluid w-100">
+                <div class="upload_image">
+                  <input type="file" id="upload" class="d-none">
+                  <label for="upload"><i class="fas fa-upload"></i></label>
+                </div>
               </div>
               <div class="info">
                 <h2 class="name">Sajib Khan</h2>
