--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
         </div>
       </div>
       <div class="gallery_main">
-        <div class="row g-3 parent-container">
+        <div class="row g-2 parent-container">
           <div class="col-lg-3">
             <div class="gallery_item">
               <div class="image">
@@ -538,26 +538,10 @@
                   </a>
                 </div>
               </div>
-              <div class="image">
-                <img src="assets/img/gal-2.png" alt="gal-2" class="img-fluid w-100">
-                <div class="icon">
-                  <a href="assets/img/gal-2.png" class="parent-container">
-                    <img src="assets/img/plus-lg.svg" alt="plus-lg" width="35">
-                  </a>
-                </div>
-              </div>
             </div>
           </div>
           <div class="col-lg-3">
             <div class="gallery_item">
-              <div class="image">
-                <img src="assets/img/gal-3.png" alt="gal-3" class="img-fluid w-100">
-                <div class="icon">
-                  <a href="assets/img/gal-3.png" class="parent-container">
-                    <img src="assets/img/plus-lg.svg" alt="plus-lg" width="35">
-                  </a>
-                </div>
-              </div>
               <div class="image">
                 <img src="assets/img/gal-4.png" alt="gal-4" class="img-fluid w-100">
                 <div class="icon">
@@ -578,10 +562,14 @@
                   </a>
                 </div>
               </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="gallery_item">
               <div class="image">
-                <img src="assets/img/gal-6.png" alt="gal-6" class="img-fluid w-100">
+                <img src="assets/img/gal-8.png" alt="gal-8" class="img-fluid w-100">
                 <div class="icon">
-                  <a href="assets/img/gal-6.png" class="parent-container">
+                  <a href="assets/img/gal-8.png" class="parent-container">
                     <img src="assets/img/plus-lg.svg" alt="plus-lg" width="35">
                   </a>
                 </div>
@@ -591,13 +579,41 @@
           <div class="col-lg-3">
             <div class="gallery_item">
               <div class="image">
-                <img src="assets/img/gal-7.png" alt="gal-7" class="img-fluid w-100">
+                <img src="assets/img/gal-1.png" alt="gal-1" class="img-fluid w-100">
                 <div class="icon">
-                  <a href="assets/img/gal-7.png" class="parent-container">
+                  <a href="assets/img/gal-1.png" class="parent-container">
                     <img src="assets/img/plus-lg.svg" alt="plus-lg" width="35">
                   </a>
                 </div>
               </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="gallery_item">
+              <div class="image">
+                <img src="assets/img/gal-4.png" alt="gal-4" class="img-fluid w-100">
+                <div class="icon">
+                  <a href="assets/img/gal-4.png" class="parent-container">
+                    <img src="assets/img/plus-lg.svg" alt="plus-lg" width="35">
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="gallery_item">
+              <div class="image">
+                <img src="assets/img/gal-5.png" alt="gal-5" class="img-fluid w-100">
+                <div class="icon">
+                  <a href="assets/img/gal-5.png" class="parent-container">
+                    <img src="assets/img/plus-lg.svg" alt="plus-lg" width="35">
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="gallery_item">
               <div class="image">
                 <img src="assets/img/gal-8.png" alt="gal-8" class="img-fluid w-100">
                 <div class="icon">
