--- a/search.html
+++ b/search.html
@@ -36,7 +36,7 @@
     <div class="top_header">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8">
+          <div class="col-xl-8">
             <div class="scrollable_news">
               <div class="title">
                 <h4>শিরোনামঃ</h4>
@@ -53,7 +53,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 align-self-center">
+          <div class="col-xl-4 align-self-center d-none d-xl-block">
             <div class="short_info d-flex justify-content-end align-items-center">
               <div class="contact_info">
                 <ul class="list-unstyled">
@@ -72,6 +72,13 @@
       </div>
     </div>
     <!-- main menu part -->
+    <!-- mobile menu -->
+    <div class="mobile_menu d-block d-lg-none">
+      <div class="container d-flex align-items-center justify-content-between">
+        <div class="logo"><a href="index.html"><img src="assets/img/logo.png" alt="logo"></a></div>
+        <button type="button" class="menu_bar"><i class="fas fa-bars"></i></button>
+      </div>
+    </div>
     <div class="main_menu">
       <div class="container">
         <div class="d-lg-flex justify-content-between align-items-center">
@@ -80,15 +87,17 @@
               <img src="assets/img/logo.png" alt="logo">
             </a>
           </div>
+          <!-- close mobile menu -->
+          <button class="mobile_menu_close d-block d-lg-none"><i class="fas fa-times"></i></button>
           <div class="menu">
             <ul class="list-unstyled">
-              <li>
+              <li class="active">
                 <a href="index.html">Home </a>
               </li>
               <li>
                 <a href="about.html">About Us</a>
               </li>
-              <li class="active"><a href="search.html">Search</a></li>
+              <li><a href="search.html">Search</a></li>
               <li><a href="package.html">Package</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
@@ -141,7 +150,7 @@
               </div>
               <form action="search-result.html">
                 <div class="row g-3">
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 col-sm-6">
                     <div class="input_groups">
                       <label>আমি খুঁজছি</label>
                       <select>
@@ -150,7 +159,7 @@
                       </select>
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 col-sm-6">
                     <div class="input_groups">
                       <label>বৈবাহিক অবস্থা</label>
                       <select>
@@ -161,7 +170,7 @@
                       </select>
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 col-sm-6">
                     <div class="input_groups">
                       <label>উচ্চতা</label>
                       <select>
@@ -172,7 +181,7 @@
                       </select>
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 col-sm-6">
                     <div class="input_groups">
                       <label>বয়স</label>
                       <select>
@@ -183,7 +192,7 @@
                       </select>
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 col-sm-6">
                     <div class="input_groups">
                       <label>ধর্ম</label>
                       <select>
@@ -194,7 +203,7 @@
                       </select>
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 col-sm-6">
                     <div class="input_groups">
                       <label>হোম ডিভিশন</label>
                       <select>
@@ -205,7 +214,7 @@
                       </select>
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 col-sm-6">
                     <div class="input_groups">
                       <label>বিভাগ</label>
                       <select>
@@ -216,7 +225,7 @@
                       </select>
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 col-sm-6">
                     <div class="input_groups">
                       <label>Country Living In</label>
                       <select>
@@ -227,7 +236,7 @@
                       </select>
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 col-sm-6">
                     <div class="input_groups">
                       <label>Education</label>
                       <select>
@@ -238,7 +247,7 @@
                       </select>
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 col-sm-6">
                     <div class="input_groups">
                       <label>Profession</label>
                       <select>
@@ -276,22 +285,23 @@
   <!-- footer part start -->
   <footer>
     <div class="footer_top_links">
-      <ul class="list-unstyled d-flex justify-content-center">
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Terms & Conditions</a></li>
-        <li><a href="#">Refund policy</a></li>
-      </ul>
+      <div class="container">
+        <ul class="list-unstyled d-sm-flex justify-content-center">
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Terms & Conditions</a></li>
+          <li><a href="#">Refund policy</a></li>
+        </ul>
+      </div>
     </div>
     <div class="container">
       <div class="footer_main text-center">
-        <div class="d-flex align-items-center justify-content-center">
-          <div class="contact_number d-flex align-items-center me-5">
+        <div class="d-lg-flex align-items-center justify-content-center">
+          <div class="contact_number d-flex justify-content-center justify-content-lg-start align-items-center me-5">
             <h4 class="ft_title">Contact us: </h4>
             <ul class="list-unstyled">
               <li><a href="tel:+8801319485475">+8801319485475</a></li>
               <li><a href="tel:+8801998526797">+8801998526797</a></li>
             </ul>
-
           </div>
           <div class="social_icon">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
