--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Matrimony</title>
   <meta name="description" content="Matrimony">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0">
 
   <link rel="shortcut icon" type="image/x-icon" href="assets/img/fevicon.png">
   <!-- Place favicon.ico in the root directory -->
