--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
       </div>
       <div class="gallery_main">
         <div class="row g-2 parent-container">
-          <div class="col-lg-3 col-sm-6">
+          <div class="col-6 col-lg-3 col-sm-6">
             <div class="gallery_item">
               <div class="image">
                 <img src="assets/img/gal-1.png" alt="gal-1" class="img-fluid w-100">
@@ -549,7 +549,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-sm-6">
+          <div class="col-6 col-lg-3 col-sm-6">
             <div class="gallery_item">
               <div class="image">
                 <img src="assets/img/gal-4.png" alt="gal-4" class="img-fluid w-100">
@@ -561,7 +561,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-sm-6">
+          <div class="col-6 col-lg-3 col-sm-6">
             <div class="gallery_item">
               <div class="image">
                 <img src="assets/img/gal-5.png" alt="gal-5" class="img-fluid w-100">
@@ -573,7 +573,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-sm-6">
+          <div class="col-6 col-lg-3 col-sm-6">
             <div class="gallery_item">
               <div class="image">
                 <img src="assets/img/gal-8.png" alt="gal-8" class="img-fluid w-100">
@@ -585,7 +585,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-sm-6">
+          <div class="col-6 col-lg-3 col-sm-6">
             <div class="gallery_item">
               <div class="image">
                 <img src="assets/img/gal-1.png" alt="gal-1" class="img-fluid w-100">
@@ -597,7 +597,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-sm-6">
+          <div class="col-6 col-lg-3 col-sm-6">
             <div class="gallery_item">
               <div class="image">
                 <img src="assets/img/gal-4.png" alt="gal-4" class="img-fluid w-100">
@@ -609,7 +609,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-sm-6">
+          <div class="col-6 col-lg-3 col-sm-6">
             <div class="gallery_item">
               <div class="image">
                 <img src="assets/img/gal-5.png" alt="gal-5" class="img-fluid w-100">
@@ -621,7 +621,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-sm-6">
+          <div class="col-6 col-lg-3 col-sm-6">
             <div class="gallery_item">
               <div class="image">
                 <img src="assets/img/gal-8.png" alt="gal-8" class="img-fluid w-100">
