--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                   <div class="d-sm-flex align-items-end">
                     <div class="form_field">
                       <div class="row g-3">
-                        <div class="col-6 col-xl col-lg-4 col-sm-6 col-md-4">
+                        <div class="col-xl col-lg-4 col-sm-6 col-md-4">
                           <div class="input_groups">
                             <label>আমি খুঁজছি</label>
                             <select>
@@ -162,7 +162,7 @@
                             </select>
                           </div>
                         </div>
-                        <div class="col-6 col-xl col-lg-4 col-sm-6 col-md-4">
+                        <div class="col-xl col-lg-4 col-sm-6 col-md-4">
                           <div class="input_groups">
                             <label>বৈবাহিক অবস্থা</label>
                             <select>
@@ -177,7 +177,7 @@
                             </select>
                           </div>
                         </div>
-                        <div class="col-6 col-xl col-lg-4 col-sm-6 col-md-4">
+                        <div class="col-xl col-lg-4 col-sm-6 col-md-4">
                           <div class="input_groups">
                             <label>বয়স</label>
                             <select>
@@ -192,7 +192,7 @@
                             </select>
                           </div>
                         </div>
-                        <div class="col-6 col-xl col-lg-4 col-sm-6 col-md-4">
+                        <div class="col-xl col-lg-4 col-sm-6 col-md-4">
                           <div class="input_groups">
                             <label>ধর্ম</label>
                             <select>
@@ -207,7 +207,7 @@
                             </select>
                           </div>
                         </div>
-                        <div class="col-6 col-xl col-lg-4 col-sm-6 col-md-4">
+                        <div class="col-xl col-lg-4 col-sm-6 col-md-4">
                           <div class="input_groups">
                             <label>বিভাগ</label>
                             <select>
