--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
           </div>
         </div>
         <div class="video_gallery_main">
-          <div class="row g-4">
+          <div class="row">
             <div class="col-lg-4 col-sm-6 mx-auto video_label">
               <div class="video_item">
                 <img src="assets/img/event-1.png" alt="event-1" class="img-fluid w-100">
