--- a/index.html
+++ b/index.html
@@ -651,11 +651,11 @@
           </div>
         </div>
         <div class="video_gallery_main">
-          <div class="row">
+          <div class="row g-4">
             <div class="col-lg-4 col-sm-6 mx-auto video_label">
               <div class="video_item">
                 <img src="assets/img/event-1.png" alt="event-1" class="img-fluid w-100">
-                <a href="https://www.youtube.com/watch?v=PkkV1vLHUvQ" class="vidplay">
+                <a href="https://www.youtube.com/watch?v=PkkV1vLHUvQ" class="vidplay w-100 d-block">
                   <div class="icon">
                     <i class="fa fa-play"></i>
                   </div>
@@ -665,7 +665,7 @@
             <div class="col-lg-4 col-sm-6 mx-auto video_label">
               <div class="video_item">
                 <img src="assets/img/event-2.png" alt="event-2" class="img-fluid w-100">
-                <a href="https://www.youtube.com/watch?v=PkkV1vLHUvQ" class="vidplay">
+                <a href="https://www.youtube.com/watch?v=PkkV1vLHUvQ" class="vidplay w-100 d-block">
                   <div class="icon">
                     <i class="fa fa-play"></i>
                   </div>
@@ -675,7 +675,7 @@
             <div class="col-lg-4 col-sm-6 mx-auto video_label">
               <div class="video_item">
                 <img src="assets/img/event-3.png" alt="event-3" class="img-fluid w-100">
-                <a href="https://www.youtube.com/watch?v=PkkV1vLHUvQ" class="vidplay">
+                <a href="https://www.youtube.com/watch?v=PkkV1vLHUvQ" class="vidplay w-100 d-block">
                   <div class="icon">
                     <i class="fa fa-play"></i>
                   </div>
