--- a/index.html
+++ b/index.html
@@ -789,6 +789,11 @@
   </main>
   <!-- main area part end -->
 
+  <!-- whatsapp icon start -->
+  <a target="_blank" href="https://wa.me/+8801998526797" class="whatsapp_icon">
+    <i class="fab fa-whatsapp"></i>
+  </a>
+  <!-- whatsapp icon end -->
   <!-- scroll top part start -->
   <button class="scroll-to-top">
     <i class="fas fa-angle-up"></i>
